# modular-rag-ollama

./: .gitignore  README.md  ollama_llm_call.ipynb  pyproject.toml  requirements.txt  test_ws_simple.py
config/: config.yaml
data/vector_store/: chroma.sqlite3
docs/: ARCHITECTURE.md  HLD.md  LLD.md
src/: __init__.py  main.py
src/api/: __init__.py  main.py  models.py
src/components/: __init__.py
src/components/generation/: __init__.py  answer_generator.py
src/components/orchestration/: __init__.py  rag_graph.py
src/components/reranking/: __init__.py  base.py  colbert.py  cross_encoder.py
src/components/retrieval/: __init__.py  document_processor.py  hybrid_search.py  hyde.py  raptor.py  vector_store.py
src/core/: __init__.py  config.py  embedding.py  llm.py  uuid_utils.py
src/utils/: __init__.py  evaluation.py  metadata_extractor.py  temporal_utils.py
tests/: __init__.py  test_rag.py
